--- a/MyAppAspNet/MyAppAspNet.csproj
+++ b/MyAppAspNet/MyAppAspNet.csproj
@@ -125,6 +125,7 @@
     <Compile Include="Controllers\GroupController.cs" />
     <Compile Include="Controllers\GroupLevelController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\MenuController.cs" />
     <Compile Include="Controllers\RoleController.cs" />
     <Compile Include="Controllers\RoleGroupLevelController.cs" />
@@ -198,6 +199,7 @@
     <Content Include="Views\appdashboard\adminsystem\User\UserGroupLevel\Index.cshtml" />
     <Content Include="Views\appdashboard\adminsystem\GroupLevel\Index.cshtml" />
     <Content Include="Views\appdashboard\adminsystem\GroupLevel\RoleGroupLevel\Index.cshtml" />
+    <Content Include="Views\Login\Index.cshtml" />
     <None Include="Views\Shared\action\add-button.cshtml" />
     <None Include="Views\Shared\action\delete-button.cshtml" />
     <None Include="Views\Shared\action\edit-button.cshtml" />
@@ -207,7 +209,6 @@
     <Folder Include="Content\AdminLTE\" />
     <Folder Include="Views\appdashboard\setting\ChangePassword\" />
     <Folder Include="Views\appdashboard\setting\ChangeProfile\" />
-    <Folder Include="Views\Login\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
