--- a/MyAppAspNet/bin/MyAppAspNet.dll.config
+++ b/MyAppAspNet/bin/MyAppAspNet.dll.config
@@ -63,7 +63,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="MyAppEntities" connectionString="metadata=res://*/Models.ModelMyApp.csdl|res://*/Models.ModelMyApp.ssdl|res://*/Models.ModelMyApp.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\MyApp.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="MyAppEntities" connectionString="metadata=res://*/Models.ModelMyApp.csdl|res://*/Models.ModelMyApp.ssdl|res://*/Models.ModelMyApp.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\MyAppAsp.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
