--- a/MyAppAspNet/Web.config
+++ b/MyAppAspNet/Web.config
@@ -63,8 +63,8 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="MyAppEntities" connectionString="metadata=res://*/Models.ModelMyApp.csdl|res://*/Models.ModelMyApp.ssdl|res://*/Models.ModelMyApp.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\MyAppAsp.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+    
+  <add name="MyAppEntities" connectionString="metadata=res://*/Models.MyApp.csdl|res://*/Models.MyApp.ssdl|res://*/Models.MyApp.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\MyAppAsp.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
