--- a/MyAppAspNet/MyAppAspNet.csproj
+++ b/MyAppAspNet/MyAppAspNet.csproj
@@ -306,6 +306,7 @@
     <Content Include="Views\appdashboard\masterdata\Menu\Edit.cshtml" />
     <Content Include="Views\appdashboard\masterdata\Menu\Delete.cshtml" />
     <Content Include="Views\appdashboard\masterdata\Menu\Detail.cshtml" />
+    <Content Include="Views\appdashboard\masterdata\Menu\Item.cshtml" />
     <None Include="Views\Shared\action\add-button.cshtml" />
     <None Include="Views\Shared\action\delete-button.cshtml" />
     <None Include="Views\Shared\action\edit-button.cshtml" />
