--- a/MyAppAspNet/MyAppAspNet.csproj
+++ b/MyAppAspNet/MyAppAspNet.csproj
@@ -79,6 +79,10 @@
     <Reference Include="Microsoft.Owin.Security.OAuth, Version=3.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Owin.Security.OAuth.3.0.1\lib\net45\Microsoft.Owin.Security.OAuth.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Owin, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f0ebd12fd5e55cc5, processorArchitecture=MSIL">
       <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
     </Reference>
@@ -147,11 +151,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
@@ -171,6 +170,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helper\SqlService.cs" />
     <Compile Include="Models\ChatMessage.cs">
       <DependentUpon>MyApp.tt</DependentUpon>
     </Compile>
@@ -310,16 +310,15 @@
     <Content Include="Views\appdashboard\adminsystem\GroupLevel\Edit.cshtml" />
     <Content Include="Views\appdashboard\adminsystem\GroupLevel\Index.cshtml" />
     <Content Include="Views\appdashboard\adminsystem\User\Add.cshtml" />
+    <Content Include="Views\appdashboard\adminsystem\GroupLevel\RoleGroupLevel\Index.cshtml" />
     <None Include="Views\Shared\action\add-button.cshtml" />
     <None Include="Views\Shared\action\delete-button.cshtml" />
     <None Include="Views\Shared\action\edit-button.cshtml" />
+    <Content Include="Views\appdashboard\adminsystem\User\UserRole\Index.cshtml" />
+    <Content Include="Views\appdashboard\adminsystem\User\UserGroupLevel\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Content\AdminLTE\" />
-    <Folder Include="Helper\" />
-    <Folder Include="Views\appdashboard\adminsystem\GroupLevel\RoleGroupLevel\" />
-    <Folder Include="Views\appdashboard\adminsystem\User\UserGroupLevel\" />
-    <Folder Include="Views\appdashboard\adminsystem\User\UserRole\" />
     <Folder Include="Views\appdashboard\setting\ChangePassword\" />
     <Folder Include="Views\appdashboard\setting\ChangeProfile\" />
   </ItemGroup>
